# europan-materialist

./: .gitattributes  .gitignore  Containerfile  README.md  SYSTEMS.md  baro-data.Containerfile  baro-data.py  baro-publish.Containerfile  build.ninja
misc/: legacy.Containerfile
misc/infra/: dnsmasq.Containerfile  materialist-machine.nft  stubby.Containerfile
misc/infra/etc/systemd/network/: 99-spl.network
misc/infra/etc/systemd/system/: link-friend.service
misc/infra/var/lib/materialist/: setup-spl-net
misc/infra/var/lib/materialist/.config/systemd/user/: spl-api.service  spl-api.socket  spl-dnsmasq.service  spl-net.service  spl-steamcmd.service  spl-steamcmd.socket  spl-stubby.service  steamcmd-image-pull.service  steamcmd-image-pull.timer
service/: Cargo.toml  ruff.toml  test.py
service-steamcmd/: Containerfile  setup.cfg
service-steamcmd/materialist/steamcmd/: __main__.py
service-web/: Containerfile  vite.config.js
service-web/assets/: palette.css
service-web/src/: Input.tsx  Remote.tsx
service/api/: .gitignore
service/api/src/: ansi.rs  logging.rs  main.rs  pragma.rs
service/api/testing/: changelog-3153737715.html  contentpackage-2108010462.xml  item-2532991202.html
service/autodaemon/: Cargo.toml
service/autodaemon-test/: Cargo.toml
service/materialist/: ansi.py  core.py  logging.py  misc.py  schema.py  steamapi.py
service/materialist/steamapi/: __main__.py  data.py  model.py  schema.py
service/materialist/steamcmd/: __main__.py
service/publish/: Containerfile  baro-publish.sh
service/service-steamcmd/: .gitignore
service/service-steamcmd/materialist/: core.py
service/service-steamcmd/materialist/steamcmd/: __main__.py
service/src/: ansi.rs  logging.rs  main.rs  schema.sql
service/stupid-rate-limit/src/: lib.rs
splicer-web/: Containerfile  build-deploy.sh  index.html  package-lock.json  package.json
splicer-web/assets/: fonts.css  splicer.css  style.css
splicer-web/src/: Async.ts  BuildNew.tsx  BuildPage.tsx  F.ts  ItemWizard.tsx  Landing.tsx  Misc.tsx  Remote.tsx  index.tsx
splicer/api/: .gitignore  .rustfmt.toml  Cargo.toml  Containerfile  materialist.default.kdl
splicer/api-config/: Cargo.toml
splicer/api-config/src/: lib.rs
splicer/api/src/: main.rs  no_args.rs  schema.sql
splicer/api/testing/: collection-3394099945.html  item-3153737715.html
splicer/autodaemon-test/src/: lib.rs
splicer/autodaemon/src/: lib.rs
splicer/proxy/: worker.js  wrangler.toml
splicer/publish/: Containerfile  splicer-publish.sh
splicer/service-steamcmd/materialist/: logging.py
splicer/steamcmd/: Containerfile
splicer/steamcmd/.cargo/: config.toml
splicer/steamcmd/materialist/: core.py
splicer/steamcmd/materialist/steamcmd/: __main__.py
splicer/stupid-rate-limit/: Cargo.toml
splicer/stupid-rate-limit/src/: lib.rs
web/: .gitignore  check-stuff.sh  index.html  package-lock.json  package.json  palette.css  style.css  tsconfig.json  vite.config.js
web/assets/: fonts.css  palette.css  style.css
web/src/: Data.ts  Filter.tsx  Filters.tsx  Locale.tsx  Page.tsx  _meme.ts  index.tsx
