[package]
name = "europan-materialist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
facet = "0.29.1"
# async-channel = "2.5.0"
# async-h1 = { version = "2.3.4", default-features = false }
# ctrlc = "3.5.0"
# hyper = { version = "1.7.0", default-features = false, features = ["client", "http1", "server"] }
# smol = "2.0.2"
# smol-hyper = { version = "0.1.1", default-features = false }
# url = { version = "2.5.7", default-features = false }
# snafu = "0.8.9"
# url = "2.5.7"

facet-json = "0.29.1"
facet-reflect = "0.29.1"

# tokio slop
tokio = { version = "1.47.1", features = ["macros", "net", "process", "rt", "signal", "sync"] }
reqwest = { version = "0.12.23", default-features = false, features = ["default-tls"] }
axum = { version = "0.8.6", default-features = false, features = ["http1", "tokio"] }
rustix = { version = "1.1.2", features = ["process"] }
jiff = { version = "0.2.15", default-features = false, features = ["std", "alloc", "tz-system", "tzdb-zoneinfo", "tz-fat"] }
rusqlite = { version = "0.37.0", default-features = false, features = ["jiff"] }
async-channel = "2.5.0"
fastrand = "2.3.0"
libsystemd-sys = { version = "0.9.4", default-features = false, features = ["journal"] }
libc = "0.2.176"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
