[package]
name = "api-config"
version = "0.1.0"
edition = "2024"

[dependencies]
http = { version = "1.4.0", default-features = false, features = ["std"] }
kdl = { version = "6.5.0", features = ["span"] }
miette = { version = "7.6.0", features = ["fancy-no-backtrace"] }
thiserror = { version = "2.0.17", default-features = false }
url = { version = "2.5.7", default-features = false }
